1. On/off switch is added to control out of vocabulary items.