@@ -1,1 +1,2 @@
 1. On/off switch is added to control out of vocabulary items.
+2. Some scripts added for long training sessions.
